--- a/WAV2ByteArray/OutputPage.xaml
+++ b/WAV2ByteArray/OutputPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WAV2ByteArray"
-      xmlns:gif="http://wpfanimatedgif.codeplex.com"
+      xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif"
       mc:Ignorable="d" 
       Title="OutputPage"
       Height="350" 
@@ -21,7 +21,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Image Name="CatGif" gif:ImageBehavior.AnimatedSource="images/loadingCat.gif" Grid.Row="1" Grid.ColumnSpan="2" Height="200" Width="Auto" HorizontalAlignment="Center" />
+        <Image Name="CatGif" gif:AnimationBehavior.SourceUri="images/loadingCat.gif" Grid.Row="1" Grid.ColumnSpan="2" Height="200" Width="Auto" HorizontalAlignment="Center" />
 
         <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Height="30" Width="500" Background="#4E87D4" VerticalAlignment="Top" HorizontalAlignment="Right">
             <Label Name="Title" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Height="Auto"></Label>
